# hubert.cpp

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu.yml
cmake/: FindAVX.cmake  FindNEON.cmake
src/examples/: main.cpp
src/lib/: hubert.cpp  hubert.h
src/tests/: hubert.cpp
